--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,6 +2,9 @@
 <!-- NE SURTOUT PAS CHANGER LES CLASS -->
 <div class="container">
   <div class="row">
+    <div class="chat col-xs-12">
+      <h3 class="text-center">Workshop: <%= @workshop.title %></h3>
+    </div>
     <div class="chat_window col-xs-12 col-md-10 col-md-offset-1">
       <ul class="messages" id="messages">
         <% @messages.each do |message| %>
